--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "typescript": "4.3.4"
   },
   "scripts": {
-    "dev": "ts-node ./script.ts"
+    "dev": "npx nodemon server.js"
   },
   "dependencies": {
     "@prisma/client": "2.25.0",
