--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "typescript": "4.3.4"
   },
   "scripts": {
-    "dev": "npx nodemon server.js"
+    "dev": "npx nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "@prisma/client": "2.25.0",
@@ -16,5 +17,17 @@
   },
   "engines": {
     "node": ">=10.0.0"
-  }
+  },
+  "description": "npm install",
+  "version": "1.0.0",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KindaPeaceOfMind/Dueliege.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/KindaPeaceOfMind/Dueliege/issues"
+  },
+  "homepage": "https://github.com/KindaPeaceOfMind/Dueliege#readme"
 }
