--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
-  "name": "script",
-  "license": "MIT",
-  "devDependencies": {
-    "prisma": "2.25.0",
-    "ts-node": "10.0.0",
-    "typescript": "4.3.4"
-  },
+  "name": "dueliege_24",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon server.js",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.12.2",
+    "prisma": "^5.11.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@prisma/client": "2.25.0",
-    "express": "^4.17.2",
-    "nodemon": "^2.0.15"
-  },
-  "engines": {
-    "node": ">=10.0.0"
-  },
-  "description": "npm install",
-  "version": "1.0.0",
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KindaPeaceOfMind/Dueliege.git"
-  },
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/KindaPeaceOfMind/Dueliege/issues"
-  },
-  "homepage": "https://github.com/KindaPeaceOfMind/Dueliege#readme"
+    "@prisma/client": "^5.11.0",
+    "express": "^4.19.2"
+  }
 }
